--- a/Group-Chat1/Client-1/pom.xml
+++ b/Group-Chat1/Client-1/pom.xml
@@ -3,15 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>Group-Chat1</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>Group-Chat1</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>Client-1</module>
-        <module>Server</module>
-    </modules>
+    <groupId>lk.ijse</groupId>
+    <artifactId>Client-1</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
