--- a/Group-Chat1/Client3/pom.xml
+++ b/Group-Chat1/Client3/pom.xml
@@ -3,17 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>Group-Chat1</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>Group-Chat1</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>Client-1</module>
-        <module>Server</module>
-        <module>Client-2</module>
-        <module>Client3</module>
-    </modules>
+    <groupId>lk.ijse</groupId>
+    <artifactId>Client3</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -51,6 +48,12 @@
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
             <version>6.20.6</version>
+        </dependency>
+        <dependency>
+            <groupId>lk.ijse</groupId>
+            <artifactId>Client-1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
